[package]
name = "gossip"
version = "0.1.0"
authors = ["pouriya-zarbafian <pouriya.zarbafian@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
rand = "0.7.3"

[dev-dependencies]
log4rs = "1.0.0-alpha-2"