[package]
name = "gossip"
version = "0.0.1"
authors = ["Pouriya Zarbafian <pouriya.zarbafian@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.11"
rand = "0.7.3"
serde = { version = "1.0.118", features = ["derive"] }
serde_cbor = "0.11.1"
blake3 = "0.3.7"

[dev-dependencies]
log4rs = "1.0.0-alpha-2"